# Mandatum

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  SECURITY.md  install.sh  rust-toolchain.toml
.agents/skills/interaction-reviewer/: SKILL.md
.agents/skills/product-architect/: SKILL.md
.agents/skills/rendering-spike/: SKILL.md
.agents/skills/terminal-conformance/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
ci/: conformance.sh  doc-trace.sh  gate.sh  gpu-spike.sh
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: approval.rs  bridge_protocol.rs  connector.rs  events.rs  fake.rs  lib.rs  spec.rs
crates/agent-runtime/src/claude/: mod.rs  parser.rs  runtime_dir.rs  session.rs
crates/agent-runtime/tests/: claude_live.rs
crates/agent-runtime/tests/fixtures/: claude_stream_allow.jsonl  claude_stream_deny.jsonl  claude_stream_write.jsonl
crates/app/: Cargo.toml
crates/app/examples/: make_live_slice.rs
crates/app/src/: agent_runtime.rs  app_shell.rs  app_state.rs  artifact_preview.rs  attention.rs  clipboard.rs  config.rs  copy_mode.rs  events.rs  frontend.rs  frontend_effect.rs  frontend_host.rs  help.rs  input.rs  keymap.rs  lib.rs  main.rs  palette.rs  persistence.rs  pointer.rs  process_events.rs  runtime_engine.rs  scene_builder.rs  search.rs  session_map.rs  task_runtime.rs  terminal_runtime.rs  timeline.rs  timeline_view.rs  update.rs
crates/app/src/app_state/: tests.rs
crates/app/tests/: distribution.rs  frontend_parity.rs  terminal_smoke.rs
crates/commands/: Cargo.toml
crates/commands/src/: fuzzy.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: action.rs  ids.rs  layout.rs  lib.rs  pane.rs  persistence.rs  session.rs  workspace.rs
crates/pty/: Cargo.toml
crates/pty/src/: lib.rs
crates/pty/tests/: abstraction.rs  native_pty.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs  overlay.rs  pane.rs  surface.rs
crates/scene/: Cargo.toml
crates/scene/src/: cell_program.rs  geometry.rs  input.rs  layout.rs  lib.rs  pane.rs  style.rs  surface.rs  theme.rs  workspace.rs
crates/scene/src/cell_program/: overlays.rs  panes.rs  primitives.rs  text_input.rs
crates/scene/tests/: cell_program.rs
crates/terminal-vt/: Cargo.toml
crates/terminal-vt/src/: fake.rs  grid.rs  lib.rs  vte_backend.rs
crates/terminal-vt/tests/: fake_adapter.rs  mouse_mode.rs
crates/terminal-vt/tests/fixtures/: basic-output.txt  carriage-return.txt  control-output.txt  scrolling-output.txt
crates/workflows/: Cargo.toml
crates/workflows/src/: lib.rs
docs/: agent-runtime.md  architecture.md  charter-ledger.md  codex-goal.md  constitution.md  decision-log.md  decisions.md  frontend-platform.md  ghostty-libghostty-evaluation.md  interaction-model.md  libghostty-vt-feasibility-spike.md  milestones.md  native-gpu-implementation-plan.md  product-principles.md  rendering-strategy.md  repo-structure.md  roadmap.md  technology-direction.md  terminal-engine.md  verification.md  workflows.md
docs/history/: charter-closure-2026-07-10.md
examples/live-slice/: .gitignore  README.md  run.sh  workspace.json
spikes/frontend-wgpu/: Cargo.toml  RESULTS.md
spikes/frontend-wgpu/gpu-renderer/: Cargo.toml
spikes/frontend-wgpu/gpu-renderer/src/: lib.rs
spikes/frontend-wgpu/scripts/: symmetric-window-latency.swift
spikes/frontend-wgpu/src/: gpu.rs  main.rs  scene_bridge.rs  stats.rs  terminal.rs
spikes/frontend-wgpu/tests/: host_wake.rs
