[workspace]
members = [
  "crates/agent-runtime",
  "crates/app",
  "crates/commands",
  "crates/core",
  "crates/pty",
  "crates/renderer",
  "crates/scene",
  "crates/terminal-vt",
  "crates/workflows",
]
default-members = [
  "crates/agent-runtime",
  "crates/app",
  "crates/commands",
  "crates/core",
  "crates/pty",
  "crates/renderer",
  "crates/scene",
  "crates/terminal-vt",
  "crates/workflows",
]
# Frontend spikes live outside the workspace: they may depend on engine
# crates, but their heavy frontend dependency trees never join the product
# build or merge gate. The isolated GPU manifest has an opt-in maintenance
# check for scene-contract changes. See docs/frontend-platform.md.
exclude = ["spikes/frontend-wgpu"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"

[workspace.dependencies]
crossterm = "0.28"
mandatum-agent-runtime = { path = "crates/agent-runtime" }
mandatum-core = { path = "crates/core" }
mandatum-commands = { path = "crates/commands" }
mandatum-pty = { path = "crates/pty" }
mandatum-renderer = { path = "crates/renderer" }
mandatum-scene = { path = "crates/scene" }
mandatum-terminal-vt = { path = "crates/terminal-vt" }
mandatum-workflows = { path = "crates/workflows" }
portable-pty = "0.9"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# preserve_order keeps config-file key order so "later binding wins"
# means document order, not alphabetical order.
toml = { version = "0.8", features = ["preserve_order"] }
vte = "0.15"
