[package]
name = "mandatum-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
crossterm.workspace = true
mandatum-agent-runtime.workspace = true
mandatum-commands.workspace = true
mandatum-core.workspace = true
mandatum-pty.workspace = true
mandatum-renderer.workspace = true
mandatum-scene.workspace = true
mandatum-terminal-vt.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
