[package]
name = "mandatum-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "mandatum"
path = "src/main.rs"

[dependencies]
crossterm.workspace = true
mandatum-agent-runtime.workspace = true
mandatum-commands.workspace = true
mandatum-core.workspace = true
mandatum-pty.workspace = true
mandatum-renderer.workspace = true
mandatum-scene.workspace = true
mandatum-terminal-vt.workspace = true
mandatum-workflows.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
