[package]
name = "mandatum-renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# Frontend adapter over the scene contract. Must not depend on the terminal
# engine directly — enforced by the [L1-GATE] direct-dependency ban in
# ci/conformance.sh.
[dependencies]
mandatum-scene.workspace = true
ratatui.workspace = true
