[package]
name = "mandatum-frontend-wgpu-spike"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false
# The spike is the default binary; tui_probe is the external ratatui probe.
default-run = "mandatum-frontend-wgpu-spike"

[workspace]
members = ["gpu-renderer"]
resolver = "3"

[[bin]]
name = "mandatum-frontend-wgpu-spike"
path = "src/main.rs"

# The native shell consumes the real shared host. mandatum-pty remains a
# direct dependency only for the standalone tui_probe binary.
[dependencies]
mandatum-app = { path = "../../crates/app" }
mandatum-pty = { path = "../../crates/pty" }
mandatum-scene = { path = "../../crates/scene" }
mandatum-gpu-renderer-spike = { path = "gpu-renderer" }

winit = "0.30"
arboard = "3.6"
pollster = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
